--- a/index.html
+++ b/index.html
@@ -12,20 +12,53 @@
     <header class="header container">
         <h1 class="mian-h">Меня зовут Анатолий Миронченко. <br> Я фронтенд разработчик.</h1>
     </header>
-    <div class="container photo-skills">
-        <div class="photo" style="background-image: url('./imgs/myPhoto.jpeg');"></div>
-        <div class="skills">
-            <h3 class="skills-h">Мои знания и умения.</h3>
-            <h5>Языки:</h5><br>
-            <p class="html">1. HTML5</p>
-            <p class="html">2. CSS3</p>
-            <p class="html">3. JAVASCRIPT</p>
-            <p class="html">4. PYTHON</p>
-            <p class="html">5. C/C++</p>
-            <h5>frameworks:</h5><br>
-            <p class="html">1. FLASK</p>
-        </div>
+
+    <div class="container">
+            <section class="photo-skills">
+                <div class="row">
+                    <div class="">
+                        <div class="">
+                            <div class="photo" style="background-image: url('./imgs/myPhoto.jpeg');"></div>
+                        </div>
+                    </div>
+                    <div class="">
+                        <div class="skills">
+                            <h3 class="skills-h">Мои знания и умения.</h3>
+                            <h5>Языки:</h5><br>
+                            <p class="html">1. HTML5</p>
+                            <p class="html">2. CSS3</p>
+                            <p class="html">3. JAVASCRIPT</p>
+                            <p class="html">4. PYTHON</p>
+                            <p class="html">5. C/C++</p>
+                            <h5>frameworks:</h5><br>
+                            <p class="html">1. FLASK</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
     </div>
+
+    <div class="container">
+        <h3 class="gallery-h">Примеры моих работ</h3>
+        <div class="row">
+            <div class="col-sm-6">
+              <a href="https://tolamironcenko.github.io/cardsGallery/" class="card">
+                <img src="./imgs/card-gallery-img.png" alt="" class="card-img-top card-img">
+                <h5 class="card-title title-card">Галерея картинок</h5>
+              </a>
+            </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <img src="./imgs/card-img-1.png" alt="" class="card-img-top card-img">
+                <h5 class="card-title title-card">Сайт доставки еды</h5>
+              </div>
+            </div>
+          </div>
+    </div>
+
+
+    
+
 
     <script src="./js/app.js"></script>
 </body>
